--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -129,6 +129,8 @@
     "files.associations": {
         "random": "cpp",
         "iostream": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "sstream": "cpp",
+        "regex": "cpp"
     }
 }
