--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,9 +56,9 @@
     },
     "prettier.tabWidth": 4,
     "editor.codeActionsOnSave": {
-        "source.fixAll.eslint": true,
-        "source.fixAll.tslint": true,
-        "source.organizeImports": true
+        "source.fixAll.eslint": "explicit",
+        "source.fixAll.tslint": "explicit",
+        "source.organizeImports": "explicit"
     },
     "liveServer.settings.donotShowInfoMsg": true,
     "githubPullRequests.pullBranch": "never",
