--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -201,5 +201,6 @@
         "typeinfo": "cpp",
         "valarray": "cpp",
         "variant": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
